@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Allow to reset flag colors and to specify as HTML colors.
 * [mjr] The mailboxList API call now returns delimiter and attribute information.
 * [jan] Fix polling for new mail from other applications.
  </notes>
@@ -2640,6 +2641,7 @@
    <date>2012-08-07</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Allow to reset flag colors and to specify as HTML colors.
 * [mjr] The mailboxList API call now returns delimiter and attribute information.
 * [jan] Fix polling for new mail from other applications.
    </notes>
